--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <DOCTYPE !html>
 <html>
 <head>
-<title>Work in Progress>
+  <title>Work in Progress</title>
 </head>
+  
 <body>
 
 <h1>This site is under construction.</h1>
